--- a/MiMecanico/appsettings.json
+++ b/MiMecanico/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConStr": "Data Source = GestionMecanico.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
